--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -8,6 +8,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<p:outputLabel value="FUNCIONA"></p:outputLabel>
+	<p:outputLabel value="FUNCIONA TONTINOOOOOOOOOOOOOOOOOOOOOOOOOO :D"></p:outputLabel>
 </body>
 </html>
